# data-management-final-project

./: .gitignore  README.md  README_RULES.md  pyproject.toml
data/: nationality_reference.csv
docs/: clean_col_02_20.md  clean_col_21_40.md  fifa21_raw_data_v2.json  transformations.md
flows/: Final Project v2.tflx  Final Project.tflx  clean_col_02_20.tfl
notebooks/: 21-77col_explore.ipynb  explore_col_02_20.ipynb  explore_data.ipynb  insights_notebook.ipynb
scripts/: clean_col_02_20.py  tabpy_kmeans.py  tabpy_quality.py  tabpy_quality_raw.py  tabpy_split_positions.py
